@@ -1,3 +1,8 @@
+2017-06-27  Juan Jose Nicola  <juan.nicola@greenbone.net>
+
+	* src/nasl_plugins.c (nasl_plugin_add): Add the script timeout to
+	the preferences list to be passed to manager.
+
 2017-06-26  Hani Benhabiles  <hani.benhabiles@greenbone.net>
 
 	* nasl/lint.c (stringcompare): Remove function.
